fixed spacing problem with projects

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -160,39 +160,39 @@
 .gtfinder { 
     background-image: url("../img/githubFinder.png");
     height: 400px; 
-    width: 400px;
+    width: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 1px solid black;
+    border: 4px solid black;
 }
 
 .conkeeper { 
     background-image: url("../img/contactKeeper.png");
     height: 400px; 
-    width: 400px;
+    width: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 1px solid black;
+    border: 4px solid black;
 }
 .itlogger { 
     background-image: url("../img/it-logger.png");
     height: 400px;
-    width: 400px; 
+    width: 600px; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 1px solid black;
+    border: 4px solid black;
 }
 .pos { 
     background-image: url("../img/pointOfSale.png");
     height: 400px;
-    width: 400px;
+    width: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border: 1px solid black;
+    border: 4px solid black;
 }
 
 .mytext {
